--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -44,14 +44,14 @@
 #status-artist { font-weight: bold; }
 #status-track { font-weight: bold; }
 
-#site-menu { margin: 0; font-size: 10px; padding-top: 5px; }
-#site-menu li { float: right; list-style: none; margin: 0 0 0 10px; }
+#site-menu { margin: 0; font-size: 10px; padding-top: 5px; float: right; }
+#site-menu li { float: left; list-style: none; margin: 0 0 0 10px; }
 
 #menu { margin: 5px 0 20px 0; }
-#menu li { text-align: center; }
-#menu .first { padding-left: 10px; }
-#menu .last { text-align: right; padding-right: 10px; }
-#menu .grid_1 a { display: block; padding: 6px 0; font-weight: bold; }
+#menu li { text-align: center; padding-top: 12px; padding-bottom: 12px; }
+#menu .first { }
+#menu .last { text-align: right; }
+#menu .grid_1 a { display: block; padding: 7px 0; font-weight: bold; }
 
 #upload-button { text-align: center; height: 32px; }
 #upload-progress { margin: 10px 0 5px 0; }
